--- a/bookmarklets/read_full_articles.html
+++ b/bookmarklets/read_full_articles.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+    <title>Howjadoo Tools - Read Full Article</title>
     <style>
            a.bookmarklet, a.button {
        /* display: -moz-inline-box; */
