--- a/bookmarklets/read_full_articles.html
+++ b/bookmarklets/read_full_articles.html
@@ -5,19 +5,19 @@
            a.bookmarklet, a.button {
        /* display: -moz-inline-box; */
        /* display: inline-block; */
-       padding: 1px 6px;
+       padding: 5px 10px;
        color: #fff;
        background: #32a0eb;
-       -webkit-border-radius: 4px;
-       -moz-border-radius: 4px;
-       border-radius: 4px;
+       -webkit-border-radius: 10px;
+       -moz-border-radius: 10px;
+       border-radius: 10px;
    
      }
     </style>
   </head>
   <body>
 
-    <li>Click and drag this button below into your Chrome bookmarks toolbar</li>
+    <li>Click and drag the "Read Full Article" button below into your Chrome bookmarks toolbar</li>
     <li>The next time you are viewing an online news article and the article is partially hidden behind a paywall, click the "Read Full Article" button in your Chrome toolbar to reveal the entire article</li>
     <br />
     <br />
