--- a/bookmarklets/read_full_articles.html
+++ b/bookmarklets/read_full_articles.html
@@ -2,17 +2,22 @@
   <head>
     <title>Howjadoo Tools - Read Full Article</title>
     <style>
-           a.bookmarklet, a.button {
-       /* display: -moz-inline-box; */
-       /* display: inline-block; */
-       padding: 5px 10px;
-       color: #fff;
-       background: #32a0eb;
-       -webkit-border-radius: 10px;
-       -moz-border-radius: 10px;
-       border-radius: 10px;
-   
-     }
+    a.bookmarklet, a.button {
+      /* display: -moz-inline-box; */
+      /* display: inline-block; */
+      padding: 5px 10px;
+      color: #fff;
+      background: #32a0eb;
+      -webkit-border-radius: 10px;
+      -moz-border-radius: 10px;
+      border-radius: 10px;
+    }
+    body {
+      font-family: sans-serif;
+      background-color: #eef;
+      font-size: 1.3em;
+      padding: 50px;
+    }
     </style>
   </head>
   <body>
