--- a/bookmarklets/read_full_articles.html
+++ b/bookmarklets/read_full_articles.html
@@ -23,6 +23,8 @@
     </style>
   </head>
   <body>
+    
+    <h1>Read Full Article</h1>
 
     <li>Click and drag the "Read Full Article" button below into your Chrome bookmarks toolbar</li>
     <li>The next time you are viewing an online news article and the article is partially hidden behind a paywall, click the "Read Full Article" button in your Chrome toolbar to reveal the entire article</li>
