--- a/bookmarklets/read_full_articles.html
+++ b/bookmarklets/read_full_articles.html
@@ -16,7 +16,7 @@
       font-family: sans-serif;
       background-color: #eef;
       font-size: 1.3em;
-      padding: 50px;
+      padding: 10px 50px;
     }
     hr {
       margin: 10px 100px;
