--- a/bookmarklets/read_full_articles.html
+++ b/bookmarklets/read_full_articles.html
@@ -20,6 +20,10 @@
     }
     hr {
       margin: 10px 100px;
+    }
+    h2 {
+      font-style: italic;
+    }
     </style>
   </head>
   <body>
@@ -35,6 +39,7 @@
       <a id="bookmarklet-a" class="bookmarklet" href="javascript:(function()%7Basync%20function%20getHTML(url)%7B%0A%20%20var%20res%20%3D%20await%20fetch(url)%3B%0A%20%20var%20text%20%3D%20await%20res.text()%3B%0A%20%20var%20doc%20%3D%20new%20DOMParser().parseFromString(text%2C'text%2Fhtml')%3B%0A%20%20return%20doc%3B%0A%7D%0Aasync%20function%20reloadContent()%7B%0A%20%20var%20doc%20%3D%20await%20getHTML(window.location.href)%3B%0A%20%20document.body.innerHTML%20%3D%20doc.body.innerHTML%3B%0A%20%20document.getElementById(%22body%22).style.overflow%20%3D%20%22visible%22%3B%0A%7D%0AreloadContent()%7D)()%3B">Read Full Article</a>
     </li>
     <hr />
+    <h2>How to drag</h2>
     <img src="drag_bookmarklet.gif" />
     
     
