--- a/bookmarklets/read_full_articles.html
+++ b/bookmarklets/read_full_articles.html
@@ -21,8 +21,10 @@
     hr {
       margin: 10px 100px;
     }
-    h2 {
+    h3 {
       font-style: italic;
+      margin-bottom: 5px;
+      padding-bottom: 5px;
     }
     </style>
   </head>
