--- a/spellingtest/index.html
+++ b/spellingtest/index.html
@@ -12,7 +12,7 @@
 
 <br />
 
-<h3>Click the black box to enter your list of spelling words</h3>
+<h3 id="instrux1">Click the black box to enter your list of spelling words</h3>
 <textarea id="userListOfWords">
 chicken
 laugh  
