--- a/spellingtest/index.html
+++ b/spellingtest/index.html
@@ -1,7 +1,13 @@
 <html>
 <head>
-<script src="sp.js"></script>
-<link rel="stylesheet" href="sp.css">
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+    <script>
+        $(document).ready(function () { // this waits until the document is fully loaded
+            // Put custom logic here
+        });
+    </script>
+    <script src="sp.js"></script>
+    <link rel="stylesheet" href="sp.css">
 </head>
 <body>
 
@@ -11,6 +17,8 @@
 </div>
 
 <br />
+
+<div id="wordlists"></div>
 
 <h3 id="instrux1">Click the black box to enter your list of spelling words</h3>
 <textarea id="userListOfWords">
